--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 		
-		<link rel="icon" type="image/png" href="favicons/favicon-196x196.png" sizes="196x196" />
-		<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96" />
-		<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" />
-		<link rel="icon" type="image/png" href="favicons/favicon-128.png" sizes="128x128" />
+		<link rel="icon" type="image/png" href="favicons/2888 - Icon.png" sizes="32x32" />
 		<meta name="application-name" content="&nbsp;" />
 		<meta name="msapplication-TileColor" content="#FFFFFF" />
 		<meta name="msapplication-TileImage" content="favicons/mstile-144x144.png" />
