--- a/equivalence-table.html
+++ b/equivalence-table.html
@@ -8,7 +8,6 @@
 					<option value="ltn1">Curious Village (Layton 1)</option>
 					<option value="ltn2">Pandora's Box (Layton 2)</option>
 					<option value="ltn3">Lost Future (Layton 3)</option>
-					<option value="ltn4">Spectre's Call (Layton 4)</option>
 				</select>
         </div>
 				<div class="col-sm-4">
@@ -27,7 +26,7 @@
 								<label for="name-type" style="display: block">Nomes da Tabela de Equivalência:</label>
 								<select class="form-control" name="name-type" id="name-type" style="width: 100%"
 									onchange="plse.changeDefaultNameTypes(this)">
-									<option value="o" selected>Originais</option>
+									<option value="eng" selected>EUA/Reino Unido</option>
 									<option value="a">Adaptados</option>
 								</select>
 			</div>
@@ -37,7 +36,8 @@
 			<thead>
 				<tr>
 					<th>Código</th>
-					<th>Nome Original</th>
+					<th>Nome Inglês</th>
+					<th>Nome Japonês</th>
 					<th>Nome Adaptado</th>
 					<th width="50">&nbsp;</th>
 				</tr>
